src/test/ui/editions/edition-keywords-2015-2018-expansion.stderr
error: expected identifier, found reserved keyword `async`
  --> $DIR/edition-keywords-2015-2018-expansion.rs:8:5
   |
LL |     produces_async! {}
   |     ^^^^^^^^^^^^^^^^^^ expected identifier, found reserved keyword
   |
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)
help: you can escape reserved keywords to use them as identifiers
   |
LL | (  ) => ( pub fn r#async (  ) {  } )
   |                  ^^^^^^^

error: aborting due to previous error

